--- a/style.css
+++ b/style.css
@@ -123,6 +123,17 @@ p {
 	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
+#portfolio-card-whatshouldidotoday {
+	height: 30em;
+	width: 80%;
+	background: url("images/whatshouldidotoday.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	margin: 1em;
+	display: inline-block;
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+}
+
 #portfolio-card-lamingtonlabs {
 	height: 30em;
 	width: 80%;
@@ -159,7 +170,7 @@ p {
 #contact-container {
 	background: #FFFFFF;
 	text-align: center;
-	padding: 15em;
+	padding: 10em;
 }
 
 #contact-container h1 {
@@ -174,12 +185,14 @@ p {
 #copyright {
 	display: inline-block;
 	float: left;
+	color: #50514F;
 }
 
 #social-media-container {
 	display: inline-block;
-	float: right;
 	font-size: 2em;
+	text-align: center;
+	width: 100%;
 }
 
 footer {
@@ -188,9 +201,13 @@ footer {
 	line-height: 5em;
 	color: white;
 	padding: 0em 5em;
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
 footer a {
-	text-decoration: none;
 	padding: 0;
+}
+
+footer a:hover {
+	color: #00CECB;
 }
