--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
@@ -34,11 +34,29 @@ p {
 	float: left;
 }
 
-#nav {
-	width: auto;
+#nav-link-container {
 	padding: 1em 5em;
+}
+
+nav {
+	width: 100%;
 	font-family: 'Ubuntu', sans-serif;
 	border-top: 0.2em solid #00CECB;
+	transition: all 1.4s ease;
+}
+
+nav.nav-sticky {
+}
+
+#nav a {
+	padding: 0.7em;
+}
+
+#contact-button {
+	background: white;
+	color: black;
+	padding: 0.7em;
+	border-radius: 2px;
 }
 
 .parallax { 
