Don't know if I changed anything after all that.

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav {
 }
 
 nav.nav-sticky {
+	position: fixed;
 }
 
 #nav a {
@@ -75,6 +76,7 @@ nav.nav-sticky {
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	z-index: 10;
 }
 
 #about-container {
