--- a/style.css
+++ b/style.css
@@ -121,70 +121,60 @@ nav.nav-sticky {
 	margin-bottom: 1em;
 }
 
-#portfolio-card-weather {
-	height: 30em;
+.portfolio-card {
+	height: auto;
 	width: 80%;
+	margin: 1em;
+	display: inline-block;
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+}
+
+.portfolio-info-container {
+	text-align: left;
+	font-size: 0.8em;
+	padding: 1em;
+	font-size: 0.9em;
+}
+
+.portfolio-info-container a {
+	color: black;
+	padding: 0;
+}
+
+#weather-img {
 	background: url("images/weather.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
-#portfolio-card-quote {
-	height: 30em;
-	width: 80%;
+#quote-img {
 	background: url("images/quote.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
-#portfolio-card-whatshouldidotoday {
-	height: 30em;
-	width: 80%;
+#whatshouldidotoday-img {
 	background: url("images/whatshouldidotoday.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
-#portfolio-card-lamingtonlabs {
-	height: 30em;
-	width: 80%;
+#lamingtonlabs-img {
 	background: url("images/lamingtonlabs.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
-#portfolio-card-qut {
-	height: 30em;
-	width: 80%;
+#qut-img {
 	background: url("images/qut.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
-#portfolio-card-pingme {
-	height: 30em;
-	width: 80%;
+#pingme-img {
 	background: url("images/pingme.png");
 	background-size: 100%;
-	background-repeat: no-repeat;
-	margin: 1em;
-	display: inline-block;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	height: 30em;
 }
 
 #contact-container {
