--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ footer a:hover {
 
 /*********** Media Queries ***********/
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 700px) {
 	nav {
 		font-size: 0.8em;
 		padding: 0;
@@ -326,6 +326,54 @@ footer a:hover {
 
 	#social-media-container {
 		font-size: 1.5em;
+	}
+
+}
+
+@media only screen and (min-width: 701px) and (max-width: 1150px) {
+
+	nav {
+		font-size: 1.3em;
+	}
+
+	#title-container h3 {
+		font-size: 1.5em;
+	}
+
+	#title-container h1 {
+		font-size: 3.8em;
+	}
+
+	#about-container {
+		padding: 3em;
+	}
+
+	#portfolio-container {
+		padding: 3em 2em;
+	}
+
+	#weather-img {
+		height: 18em;
+	}
+
+	#quote-img {
+		height: 18em;
+	}
+
+	#whatshouldidotoday-img {
+		height: 18em;
+	}
+
+	#lamingtonlabs-img {
+		height: 18em;
+	}
+
+	#qut-img {
+		height: 18em;
+	}
+
+	#pingme-img {
+		height: 18em;
 	}
 
 }
