--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ nav.nav-sticky {
 	border-radius: 2px;
 }
 
-.parallax { 
-    height: 100vh; 
+.parallax {
+    height: 100vh;
     background-image: url("images/parallax.jpg");
     background-attachment: fixed;
     background-position: center;
@@ -81,7 +81,7 @@ nav.nav-sticky {
 
 #about-container {
 	background: #FFFFFF;
-	padding: 5em 5em;
+	padding: 5em 5em 4em 5em;
 }
 
 #about-me-summary {
@@ -108,6 +108,16 @@ nav.nav-sticky {
 	width: 45%;
 	display: inline-block;
 	float: right;
+}
+
+#resume-container {
+	text-align: right;
+	padding-top: 2em;
+}
+
+#resume-container a {
+	color: black;
+	padding: 0.2em;
 }
 
 #portfolio-container {
@@ -194,7 +204,7 @@ nav.nav-sticky {
 }
 
 #weather-img:hover .weather-hover {
-  	background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.6);
 	opacity: 1;
 }
 
