--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ nav.nav-sticky {
 
 .parallax {
     height: 100vh;
-    background-image: url("images/parallax.jpg");
+    background-image: url("../images/parallax.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -184,7 +184,7 @@ nav.nav-sticky {
 }
 
 #weather-img {
-	background: url("images/weather.png");
+	background: url("../images/weather.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -209,7 +209,7 @@ nav.nav-sticky {
 }
 
 #quote-img {
-	background: url("images/quote.png");
+	background: url("../images/quote.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -234,7 +234,7 @@ nav.nav-sticky {
 }
 
 #whatshouldidotoday-img {
-	background: url("images/whatshouldidotoday.png");
+	background: url("../images/whatshouldidotoday.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -259,7 +259,7 @@ nav.nav-sticky {
 }
 
 #lamingtonlabs-img {
-	background: url("images/lamingtonlabs.png");
+	background: url("../images/lamingtonlabs.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -284,7 +284,7 @@ nav.nav-sticky {
 }
 
 #qut-img {
-	background: url("images/qut.png");
+	background: url("../images/qut.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -309,7 +309,7 @@ nav.nav-sticky {
 }
 
 #pingme-img {
-	background: url("images/pingme.png");
+	background: url("../images/pingme.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -376,169 +376,4 @@ footer a {
 
 footer a:hover {
 	color: #00CECB;
-}
-
-/*********** Media Queries ***********/
-
-@media only screen and (max-width: 700px) {
-	nav {
-		font-size: 0.8em;
-		padding: 0;
-	}
-
-	#contact-button {
-		padding: 0;
-	}
-
-	#title-container h1 {
-		font-size: 2em;
-	}
-
-	#title-container h3 {
-			font-size: 0.7em;
-	}
-
-	#about-container {
-		overflow: auto;
-		padding: 5em 2em;
-	}
-
-	#me-column {
-		display: inline;
-		margin-right: 0;
-	}
-
-	#skills-column {
-		display: inline;
-		float: left;
-		width: auto;
-		margin-top: 1.5em;
-	}
-
-	#portfolio-container {
-		padding: 2em 0em;
-	}
-
-	#portfolio-container h1 {
-		font-size: 2em;
-	}
-
-	.portfolio-card {
-		height: auto;
-		width: 80%;
-		margin: 1em;
-		display: inline-block;
-	}
-
-	.portfolio-info-container {
-		padding: 1em;
-		font-size: 0.8em;
-	}
-
-	.proj-tech {
-		float: none;
-	}
-
-	#weather-img {
-		height: 10em;
-	}
-
-	#quote-img {
-		height: 10em;
-	}
-
-	#whatshouldidotoday-img {
-		height: 10em;
-	}
-
-	#lamingtonlabs-img {
-		height: 10em;
-	}
-
-	#qut-img {
-		height: 10em;
-	}
-
-	#pingme-img {
-		height: 10em;
-	}
-
-	#contact-container {
-		padding: 7em 2em;
-	}
-
-	#contact-container h1 {
-		margin-bottom: 0.5em;
-		font-size: 1.5em;
-	}
-
-	#contact-container h3 {
-		font-size: 0.8em;
-	}
-
-	#contact-container p {
-		margin-top: 1em;
-		font-size: 0.7em;
-	}
-
-	#social-media-container {
-		font-size: 1.5em;
-	}
-
-}
-
-@media only screen and (min-width: 701px) and (max-width: 1024px) {
-
-	nav {
-		font-size: 1.3em;
-	}
-
-	#title-container h3 {
-		font-size: 1.5em;
-	}
-
-	#title-container h1 {
-		font-size: 3.8em;
-	}
-
-	#about-container {
-		padding: 3em;
-	}
-
-	#portfolio-container {
-		padding: 3em 2em;
-	}
-
-	.proj-tech {
-		float: none;
-	}
-
-	#weather-img {
-		height: 18em;
-	}
-
-	#quote-img {
-		height: 18em;
-	}
-
-	#whatshouldidotoday-img {
-		height: 18em;
-	}
-
-	#lamingtonlabs-img {
-		height: 18em;
-	}
-
-	#qut-img {
-		height: 18em;
-	}
-
-	#pingme-img {
-		height: 18em;
-	}
-
-	#contact-container {
-		padding: 5em;
-	}
-
 }
