--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -15,6 +15,11 @@ nav {
     font-size: 0.7em;
 }
 
+.parallax {
+  background-size: auto;
+  background-position: center bottom;
+}
+
 #about-container {
   overflow: auto;
   padding: 5em 2em 3em 2em;
