--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@ nav.nav-sticky {
 
 .portfolio-overlay-text {
 	color: white;
-	font-size: 20px;
+	font-size: 25px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -204,6 +204,31 @@ nav.nav-sticky {
 }
 
 #weather-img:hover .weather-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
+#super-img {
+	background: url("../images/super.png");
+	background-size: cover;
+	height: 30em;
+	position: relative;
+}
+
+.super-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#super-img:hover .super-hover {
   background: rgba(0, 0, 0, 0.6);
 	opacity: 1;
 }
