Added latest portfolio pieces, placeholders only. Fixed some formatting on larger screen sizes. Updated personal info + skills.

--- a/styles/style_v3.css
+++ b/styles/style_v3.css
@@ -184,6 +184,135 @@ nav.nav-sticky {
 	-ms-transform: translate(-50%, -50%);
 }
 
+#icosian-website-img {
+	background: url("../images/icosian-website.png");
+	background-size: 100%;
+	background-position: 0px -50px;
+	height: 30em;
+	position: relative;
+}
+
+.icosian-website-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#icosian-website-img:hover .icosian-website-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
+#icosian-img {
+	background: url("../images/icosian.png");
+	background-size: 100%;
+	height: 30em;
+	position: relative;
+}
+
+.icosian-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#icosian-img:hover .icosian-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
+#cns-cloud-img {
+	background: url("../images/cns-cloud.png");
+	background-size: 100%;
+	background-position: 0px -90px;
+	height: 30em;
+	position: relative;
+}
+
+.cns-cloud-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#cns-cloud-img:hover .cns-cloud-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
+#scooter-img {
+	background: url("../images/scooter.png");
+	background-size: 100%;
+	background-position: 0px -90px;
+	height: 30em;
+	position: relative;
+}
+
+.scooter-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#scooter-img:hover .scooter-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
+#fm-finance-img {
+	background: url("../images/fm-finance.png");
+	background-size: 100%;
+	background-position: 0px -90px;
+	height: 30em;
+	position: relative;
+}
+
+.fm-finance-hover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease-in-out;
+	background: #000000;
+}
+
+#fm-finance-img:hover .fm-finance-hover {
+  background: rgba(0, 0, 0, 0.6);
+	opacity: 1;
+}
+
 #weather-img {
 	background: url("../images/weather.png");
 	background-size: 100%;
