RENAME: Renamed some img names.

--- a/styles/style_v4.css
+++ b/styles/style_v4.css
@@ -185,7 +185,7 @@ nav.nav-sticky {
 }
 
 #icosian-website-img {
-	background: url("../images/icosian-io.png");
+	background: url("../images/Icosian-io.png");
 	background-size: 100%;
 	background-position: 0px 0px;
 	height: 30em;
@@ -211,7 +211,7 @@ nav.nav-sticky {
 }
 
 #icosian-img {
-	background: url("../images/icosian.png");
+	background: url("../images/Icosian.png");
 	background-size: 100%;
 	height: 30em;
 	position: relative;
@@ -236,7 +236,7 @@ nav.nav-sticky {
 }
 
 #cns-cloud-img {
-	background: url("../images/cns-cloud.png");
+	background: url("../images/CNS-Cloud.png");
 	background-size: 100%;
 	background-position: 0px -90px;
 	height: 30em;
@@ -288,7 +288,7 @@ nav.nav-sticky {
 }
 
 #fm-finance-img {
-	background: url("../images/fm-finance.png");
+	background: url("../images/FM-Finance.png");
 	background-size: 100%;
 	background-position: 0px -90px;
 	height: 30em;
